# untangle

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.sh
examples/: introduction.ipynb
untangle/algorithm/: __init__.py
untangle/algorithm/CMTF_SSD/: CMTF_SSD.py  __init__.py
untangle/algorithm/basic/: __init__.py  basic.py  basic_constrained.py  test.py  test_basic.py
untangle/algorithm/basic_constrained/: __init__.py  basic_constrained.py  test.py
untangle/algorithm/cmtf_ssd/: __init__.py  cmtf_ssd.py
untangle/algorithms/basic/: __init__.py  basic.py  test.py  test_basic.py
untangle/decomposition/: __init__.py  common.py  cpd.py  cpd_constrained.py  decomposition.py  parallel.py  search.py
untangle/ops/: ops.py
untangle/utils/: utils.py
