[project]
name = "untangle"
version = "0.0.0"
description = "Jax package for decoupling multivariate functions using tensor decompositions."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beartype>=0.22.9",
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
]
